module(name = "roo_monitoring", version = "1.0.0")

bazel_dep(name = "googletest", version = "1.17.0")
bazel_dep(name = "roo_testing", version = "1.1.8")

bazel_dep(name = "roo_collections", version = "1.3.2")
bazel_dep(name = "roo_io", version = "2.0.3")
bazel_dep(name = "roo_logging", version = "1.4.3")
